--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,23 @@ main {
 }
 .description span {
   color: var(--orange-color);
+   background-image: linear-gradient(45deg, #ff5500, #cf4d0c, #ff5500 );
+   background-size: 400% 100%;
+   animation: gradient 10s ease-in-out infinite alternate;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
 }
+
+@keyframes gradient {
+    0% {
+        background-position-x:0%;
+    }
+
+    100% {
+        background-position: 400%;
+    }
+}
+
 .description p {
   color: var(--text-color);
   font-size: 1em;
