--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ main {
 }
 .description span {
   color: var(--orange-color);
-   background-image: linear-gradient(45deg, #ff5500, #cf4d0c, #ff5500 );
+   background-image: linear-gradient(45deg, #ff5500, #913507, #ff5500 );
    background-size: 400% 100%;
    animation: gradient 10s ease-in-out infinite alternate;
    -webkit-background-clip: text;
