--- a/css/style.css
+++ b/css/style.css
@@ -281,8 +281,9 @@ main {
 }
 .description span {
   color: var(--orange-color);
-   background-image: linear-gradient(45deg, #ff5500, #913507, #ff5500 );
+   background-image: linear-gradient(45deg, #ff5500, #9c3806, #ff5500 );
    background-size: 400% 100%;
+  font-size: 2.6em;
    animation: gradient 10s ease-in-out infinite alternate;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
