--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,10 @@ main {
 .flex-main .btn-contato {
   margin-top: 30px;
   transition: 0.5s;
+  background-image: linear-gradient(45deg, #ff4000, #9c3806, #ff4000 );
+   background-size: 400% 100%;
+   animation: gradient 10s ease-in-out infinite alternate;
+   
 }
 
 /*keyframes*/
