--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,12 @@ section.about {
   font-family: "Poppins";
 }
 .descrition-about h3 {
-  color: var(--orange-color);
+  background-image: linear-gradient(45deg, #ff4000, #9c3806, #ff4000 );
+  background-size: 400% 100%;
+  animation: gradient 10s ease-in-out infinite alternate;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
   font-size: 1.5em;
   font-family: "Poppins";
 }
@@ -721,7 +726,9 @@ section.project {
   border-radius: 8px;
   border: none;
   transition: 0.5s;
-  background-color: var(--orange-color);
+   background-image: linear-gradient(45deg, #ff4000, #9c3806, #ff4000 );
+   background-size: 400% 100%;
+   animation: gradient 10s ease-in-out infinite alternate;
   cursor: pointer;
 }
 
@@ -813,7 +820,9 @@ section.project {
     border-radius: 8px;
     border: none;
     transition: 0.5s;
-    background-color: var(--orange-color);
+    background-image: linear-gradient(45deg, #ff4000, #9c3806, #ff4000 );
+    background-size: 400% 100%;
+    animation: gradient 10s ease-in-out infinite alternate;
     cursor: pointer;
   }
 }
@@ -922,7 +931,9 @@ section.project {
     border-radius: 8px;
     border: none;
     transition: 0.5s;
-    background-color: var(--orange-color);
+    background-image: linear-gradient(45deg, #ff4000, #9c3806, #ff4000 );
+    background-size: 400% 100%;
+    animation: gradient 10s ease-in-out infinite alternate;
     cursor: pointer;
   }
 }
@@ -1079,7 +1090,9 @@ section.contact input[type=submit] {
   font-family: "Poppins";
   border: none;
   color: var(--white-color);
-  background-color: var(--orange-color);
+  background-image: linear-gradient(45deg, #ff4000, #9c3806, #ff4000 );
+   background-size: 400% 100%;
+   animation: gradient 10s ease-in-out infinite alternate;
   cursor: pointer;
 }
 
