--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ main {
 }
 .description span {
   color: var(--orange-color);
-   background-image: linear-gradient(45deg, #ff4000, #9c3806, #ff4000 );
+   background-image: linear-gradient(45deg, #ff470a, #9c3806, #ff470a );
    background-size: 400% 100%;
    animation: gradient 10s ease-in-out infinite alternate;
    -webkit-background-clip: text;
