--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ nav.menu-desktop a:hover {
   text-transform: uppercase;
   border-radius: 8px;
   transition: 0.5s;
-   background-image: linear-gradient(45deg, #ff4000, #9c3806, #ff4000 );
+   background-image: linear-gradient(45deg, #f54307, #9c3806, #f54307 );
    background-size: 400% 100%;
    animation: gradient 10s ease-in-out infinite alternate;
   cursor: pointer;
@@ -283,7 +283,7 @@ main {
 }
 .description span {
   color: var(--orange-color);
-   background-image: linear-gradient(45deg, #ff470a, #9c3806, #ff470a );
+   background-image: linear-gradient(45deg, #f54307, #9c3806, #f54307 );
    background-size: 400% 100%;
    animation: gradient 10s ease-in-out infinite alternate;
    -webkit-background-clip: text;
