--- a/css/style.css
+++ b/css/style.css
@@ -1036,8 +1036,9 @@ section.contact input[type=text] {
   border-radius: 8px;
   color: var(--orange-color);
   font-family: "Poppins";
+  background: none;
   line-height: 40px;
-  border: 1px solid var(--border-bottom);
+  border: 1px solid var(--orange-color);
   padding-left: 15px;
 }
 
@@ -1068,9 +1069,10 @@ section.contact textarea {
   color: var(--orange-color);
   font-size: 1em;
   font-family: "Poppins";
+  background: none;
   resize: none;
   padding: 8px;
-  border: 1px solid var(--white-color);
+  border: 1px solid var(--orange-color);
 }
 
 section.contact textarea::-moz-placeholder {
