--- a/css/style.css
+++ b/css/style.css
@@ -922,6 +922,23 @@ section.project {
     padding: 0 2%;
     top: 5px;
   }
+
+   .flex-skills {
+        display: flex;
+        gap: .5rem;
+        padding: 0 2%;
+        justify-content: center;
+   }
+
+   .flex-skills {
+        img {
+            width: 40px;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+    }
   .flex-box-project {
     display: flex;
     align-items: center;
